--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   <div id="root"></div>
   <script src="https://unpkg.com/react-table@latest/react-table.js"></script>
   <script src="https://unpkg.com/react-table@latest/react-table.min.js"></script>
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </body>
 
 </html>
